# BeatSense

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.es.md  README.md  app.py  docker-compose.yml  eda_heart_failure_R.ipynb  historial_pacientes.csv  main.py  pyproject.toml
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
api/: main.py
data/: heart_procesado_g.csv  heart_procesado_i.csv  heart_processed_R.csv  model_R.pkl
docker/: entrypoint.sh
docs/: article-medium.md  historial_pacientes.csv
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[lang]/: layout.tsx  page.tsx
frontend/src/app/[lang]/eda/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/charts/: eda-charts.tsx
frontend/src/components/dashboard/: dashboard-client.tsx
frontend/src/components/forms/: evaluation-form.tsx
frontend/src/components/layout/: header.tsx  language-toggle.tsx  page-header.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/components/model/: model-insights.tsx
frontend/src/components/patients/: patients-table.tsx
frontend/src/components/settings/: settings-panel.tsx
frontend/src/components/ticket/: ticket.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
frontend/src/i18n/: config.ts  context.tsx  dictionaries.ts
frontend/src/i18n/dictionaries/: en.json  es.json
models/: model_R.pkl  modelo_coronario.pkl  scaler_coronario.pkl
notebook/: eda_heart_disease_p.ipynb  eda_heart_failure_R.ipynb  eda_heart_failure_g.ipynb  eda_heart_failure_i.ipynb  entrenamiento_modelo_final.ipynb  entrenamiento_modelo_g.ipynb  entrenamiento_modelo_i.ipynb  heart_processed_R.csv
report/: entrenamiento_modelo_final.html  report_R.pages
(+4 files in other folders)
