[project]
name = "project-6-team-4-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair<5",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.5",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.2",
    "optree>=0.19.0",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "plotly-express>=0.4.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "streamlit-lottie>=0.0.5",
    "xgboost>=3.2.0",
]
